--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Responsive portfolio website",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "sass": "node-sass -w scss/ -o dist/css/ --recursive"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/Siirabs/Front-End/issues"
   },
-  "homepage": "https://github.com/Siirabs/Front-End#readme"
+  "homepage": "https://github.com/Siirabs/Front-End#readme",
+  "dependencies": {
+    "node-sass": "^5.0.0"
+  }
 }
