--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "description": "Responsive portfolio website",
   "main": "index.js",
+  
   "scripts": {
-    "sass": "node-sass -w scss/ -o dist/css/ --recursive"
+    "sass": "node-sass -w scss/ -o dist/css/ --recursive",
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
@@ -15,8 +17,9 @@
   "bugs": {
     "url": "https://github.com/Siirabs/Front-End/issues"
   },
-  "homepage": "https://github.com/Siirabs/Front-End#readme",
+  "homepage": "https://Siirabs.github.io/Front-End/",
   "dependencies": {
+    "gh-pages": "^3.1.0",
     "node-sass": "^5.0.0"
   }
 }
